// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Certificação — regressão industrial (snapshots) > furação europeia na lateral — apenas cavilhas + rasgo (sem Ø5) 1`] = `
[
  {
    "face": "A",
    "x": 490,
    "y": 39,
  },
  {
    "face": "A",
    "x": 490,
    "y": 403.5,
  },
  {
    "face": "A",
    "x": 0,
    "y": 30,
  },
  {
    "face": "A",
    "x": 0,
    "y": 412.5,
  },
]
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=1 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 532.5,
  "bodyWidth": 548,
  "height": 710,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich ArciTech",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=2 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 264.75,
  "bodyWidth": 548,
  "height": 353,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -173.5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich ArciTech",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=2 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 264.75,
  "bodyWidth": 548,
  "height": 353,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 183.5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich ArciTech",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 175.5,
  "bodyWidth": 548,
  "height": 234,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -233,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich ArciTech",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 175.5,
  "bodyWidth": 548,
  "height": 234,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich ArciTech",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 3`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 175.5,
  "bodyWidth": 548,
  "height": 234,
  "index": 2,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 243,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich ArciTech",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 130.875,
  "bodyWidth": 548,
  "height": 174.5,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -262.75,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich ArciTech",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 130.875,
  "bodyWidth": 548,
  "height": 174.5,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -84.25,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich ArciTech",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 3`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 130.875,
  "bodyWidth": 548,
  "height": 174.5,
  "index": 2,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 94.25,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich ArciTech",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 4`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 130.875,
  "bodyWidth": 548,
  "height": 174.5,
  "index": 3,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 272.75,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich ArciTech",
  "softClose": true,
  "width": 598,
}
`;
